--- a/main.css
+++ b/main.css
@@ -1,26 +1,3 @@
-html{
-    --bg-color:#0d1117;
-    --fg-color:#e6edf3;
-    --fgColor-muted:#8d96a0;
-    --bgColor-neutral-muted:#6e768166;
-    --font-size:0.875rem;
-
-    --borderRadius-medium:0.375rem;
-    --borderWidth-thin:max(1px,0.0625rem);
-    --base-size-8:0.5rem;
-    --base-size-12:0.75rem;
-    --base-size-16:1rem;
-    --base-size-32:2rem;
-    --base-size-48:3rem;
-    --control-medium-paddingBlock:0.375rem;
-    --control-medium-paddingInline-condensed:0.5rem;
-    --button-default-borderColor-rest:#30363d;
-    --control-transparent-bgColor-hover:#b1bac41f;
-    --controlStack-medium-gap-auto:0.5rem;
-
-    --header-bg:#010409;
-}
-
 body{
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";    
     font-size: var(--font-size);
@@ -30,8 +7,63 @@ body{
     margin:0;
 }
 
+button, input, select, textarea {
+    font: inherit;
+    margin: 0;
+}
+
+img {
+    border-style: none;
+}
+
 strong{
     font-weight: 600;
+}
+
+ul, ol {
+    padding-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.Button {
+    align-items: center;
+    background-color: initial;
+    border: var(--borderWidth-thin) solid;
+    border-color: #0000;
+    border-radius: var(--borderRadius-medium);
+    color: var(--button-default-fgColor-rest);
+    cursor: pointer;
+    display: inline-flex;
+    flex-direction: row;
+    font-size: var(--text-body-size-medium);
+    font-weight: var(--base-text-weight-medium);
+    gap: var(--base-size-4);
+    height: var(--control-medium-size);
+    justify-content: space-between;
+    min-width: max-content;
+    padding: 0 var(--control-medium-paddingInline-normal);
+    position: relative;
+    text-align: center;
+    transition: var(--duration-fast) var(--easing-easeInOut);
+    transition-property: color,fill,background-color,border-color;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+.Button-content {
+    align-items: center;
+    display: grid;
+    flex: 1 0 auto;
+    grid-template-areas: "leadingVisual text trailingVisual";
+    grid-template-columns: min-content minmax(0, auto) min-content;
+    place-content: center;
+}
+
+.Button-label {
+    grid-area: text;
+    line-height: var(--text-body-lineHeight-medium);
+    white-space: nowrap;
 }
 
 .sr-only{
@@ -47,6 +79,7 @@ strong{
 
 .app-header{
     background: var(--header-bg);
+    box-shadow: inset 0 calc(var(--borderWidth-thin, 1px)*-1) var(--borderColor-default);
 }
 
 .app-header-button{
@@ -61,6 +94,10 @@ strong{
     grid-auto-columns: max-content;
     align-items: center;
     justify-content: center;
+}
+
+.header-end .app-header-button:hover{
+    background: var(--control-transparent-bgColor-hover);
 }
 
 .app-header-button svg{
@@ -83,10 +120,9 @@ strong{
 }
 
 .header-logo{
-    width: var(--base-size-32, 32px);
-    height: var(--base-size-32, 32px);
     border: 0;
     outline-offset: 2px;
+    cursor: pointer;
 }
 
 .header-title{
@@ -95,7 +131,20 @@ strong{
     height: var(--base-size-32, 32px);
 }
 
-.header-title-full a{
+.header-title-compact{
+    display: none;
+}
+
+@media (max-width:768px) {
+    .header-title-full{
+        display: none;
+    }
+    .header-title-compact{
+        display: block !important; 
+    }
+}
+
+.header-title-compact a{
     display: grid;
     height: var(--base-size-48, 48px);
     color: inherit;
@@ -110,8 +159,26 @@ strong{
     align-items: center;
 }
 
-.header-title-full a:hover{
+.header-title-compact a:hover{
     background-color: var(--control-transparent-bgColor-hover);
+}
+
+.title-compact-lead{
+    display: grid;
+    width: -moz-fit-content;
+    width: fit-content;
+    font-size: 12px;
+    line-height: 1.33;
+    color: var(--fgColor-muted, var(--color-fg-muted));
+    grid-auto-flow: column;
+    align-items: center;
+}
+
+.title-compact-lead span{
+    display: inline;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .header-title strong{
@@ -123,6 +190,48 @@ strong{
     white-space: nowrap;
 }
 
+.header-title-full ul{
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+}
+
+.header-title-full li:first-child{
+    flex:0 100 max-content;
+}
+
+.header-title-full li:last-child{
+    font-weight: var(--base-text-weight-semibold);
+}
+
+.header-title-full li{
+    display: inline-grid;
+    grid-auto-flow: column;
+    align-items: center;
+    list-style: none;
+}
+
+.header-title-full li a{
+    display: flex;
+    align-items: center;
+    min-width: 3ch;
+    line-height: var(--text-body-lineHeight-medium);
+    text-decoration: none !important;
+    border-radius: var(--borderRadius-medium);
+    padding-inline: var(--control-medium-paddingInline-condensed);
+    padding-block: var(--control-medium-paddingBlock);
+    color: inherit;
+}
+
+.header-title-full li a:hover{
+    background: var(--control-transparent-bgColor-hover);
+}
+
+.header-title-full .separator{
+    color: var(--fgColor-muted);
+    white-space: nowrap;
+}
+
 .header-end {
     flex: 0 1 auto;
     display: flex;
@@ -131,8 +240,117 @@ strong{
     max-height: calc(var(--base-size-32, 32px));
 }
 
+.search-input{
+    display: inline-flex;
+    height: 100%;
+    gap: var(--base-size-8);
+    color: var(--fgColor-muted);
+    border: solid var(--borderWidth-thin) var(--button-default-borderColor-rest);
+    border-radius: var(--borderRadius-medium);
+    padding-inline: var(--control-medium-gap);
+    align-items: center;
+}
+
+.search-input svg{
+    fill: currentColor;
+}
+
+.search-input input{
+    height:100%;
+    border: none;
+    padding: 0;
+    background-color: var(--header-bg);
+    color: var(--fg-color);
+    outline: none;
+}
+
+.input-focus{
+    outline: 2px solid var(--focus-outlineColor);
+    border: 0 !important; 
+}
+
 .header-pfp {
     position: relative;
     background: var(--bgColor-neutral-muted);
     border-radius: 50%;
+}
+
+.avatar {
+    background-color: var(--avatar-bgColor);
+    border-radius: var(--borderRadius-medium);
+    box-shadow: 0 0 0 1px var(--avatar-borderColor);
+    display: inline-block;
+    line-height: 1;
+    overflow: hidden;
+    vertical-align: middle;
+}
+
+.circle {
+    border-radius: var(--borderRadius-full, 50%) !important;
+}
+
+.local{
+    padding: 0 var(--base-size-16);
+}
+
+.underline-nav{
+    box-shadow: inset 0 -1px 0 var(--borderColor-muted);
+    display: flex;
+    min-height: var(--base-size-48);
+    -webkit-overflow-scrolling: auto;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+.underline-nav ul{
+    display: flex;
+    gap: var(--control-medium-gap);
+    list-style: none;
+}
+
+.underline-nav ul li{
+    display: inline-flex;
+    align-items: center;
+}
+
+.underline-nav ul li.selected{
+    border-bottom: 2px solid;
+    border-bottom-color: var(--underlineNav-borderColor-active);
+}
+
+.underline-nav ul li.selected a {
+    color: var(--fgColor-default);
+    font-weight: var(--base-text-weight-semibold);
+}
+
+.underline-nav ul li a{
+    align-items: center;
+    height: 30px;
+    background-color: initial;
+    border: 0;
+    border-radius: var(--borderRadius-medium);
+    color: var(--fgColor-default);
+    cursor: pointer;
+    display: flex;
+    font-size: var(--text-body-size-medium);
+    line-height: 30px;
+    padding: 0 var(--control-medium-paddingInline-condensed);
+    position: relative;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.underline-nav ul li a:hover {
+    background: var(--control-transparent-bgColor-hover);
+    -webkit-text-decoration: none;
+    text-decoration: none;
+    transition: background .12s ease-out;
+}
+
+.underline-nav-octicon{
+    color: var(--fgColor-muted);
+    display: inline !important;
+    margin-right: var(--control-medium-gap);
+    fill: var(--fgColor-muted);
+    vertical-align: text-bottom;
 }
